--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "homepage": "https://TavishiS.github.io/Tavishi_Portfolio"
   },
   "dependencies": {
     "@remixicon/react": "^4.6.0",
