--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://TavishiS.github.io/Tavishi_Portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist",
-    "homepage": "https://TavishiS.github.io/Tavishi_Portfolio"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@remixicon/react": "^4.6.0",
